show all mods from the manifest and which are also in the inventory

--- a/Destiny2WeaponMods/Views/WeaponMods/Index.cshtml
+++ b/Destiny2WeaponMods/Views/WeaponMods/Index.cshtml
@@ -9,7 +9,17 @@
         <ul>
             @foreach(var mod in Model.WeaponMods)
             {
-                <li>@mod.DisplayProperties.Name</li>
+                <li>
+                    @if(mod.IsUnlocked)
+                    {
+                        <input type="checkbox" checked>
+                    }
+                    else
+                    {
+                        <input type="checkbox">
+                    }
+                    <img src="@mod.IconUrl" width="48" height="48">@mod.Name
+                </li>
             }
         </ul>
     </div>
